--- a/styles/global.css
+++ b/styles/global.css
@@ -8,12 +8,16 @@ body {
   font-size: 18px;
 }
 
+body {
+  background: linear-gradient(110deg,#fdcd3b 70%, #ffed4b 70%);
+}
+
 * {
   box-sizing: border-box;
 }
 
 a {
-  color: #0070f3;
+  color: #0053B3;
   text-decoration: none;
 }
 
